# gps-sim

./: README.md  pyproject.toml
docs/templates/: README.md  gps-sim-ui-windows-shortcut.vbs.template  run-gps-sim-ui-macos.sh.template
gps-sim.app/Contents/: Info.plist  document.wflow
gps-sim.app/Contents/MacOS/: Automator Application Stub
gps-sim.app/Contents/_CodeSignature/: CodeResources
scripts/install/: README.md  _common.sh  install-macos.sh  install-raspberry-pi-os.sh  install-ubuntu.sh  install-windows.ps1  linux-qtwebengine-runtime-deps.sh
scripts/install/templates/: gps-sim-ui-autostart.desktop.template  gps-sim-ui.desktop.template
src/gps_sim/: __init__.py  __main__.py  brdc_download.py  cli.py  elevation.py  history.py  rinex_nav.py  run_sim.py  settings.py
src/gps_sim_ui/: __init__.py  brdc_thread.py  bridge.py  elevation_thread.py  login_dialog.py  main.py  mainwindow.py  worker.py
tests/: test_brdc_download.py  test_cli.py  test_elevation.py  test_ephemeris_settings.py  test_history.py  test_rinex_nav.py  test_run_sim.py  test_settings.py  test_smoke.py
tests/fixtures/: brdc_minimal.n
