[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gps-sim"
version = "0.1.0"
description = "Заготовка проекта для работы с GPS/GNSS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["gps", "nmea", "gnss", "simulation"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
gps-sim = "gps_sim.cli:main"

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["gps_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
